Write README.md, add README_ru.md