@@ -1,71 +1,213 @@
-# docker-biserver-ce
-Pentaho BI server(community edition) docker image. https://hub.docker.com/r/zhicwu/biserver-ce/
+# Flexberry/pentaho
 
-## What's inside
-```
-ubuntu:16.04
- |
- |-- phusion/baseimage:0.9.22
-      |
-      |-- zhicwu/java:8
-           |
-           |-- zhicwu/biserver-ce:8.0-base
-                |
-                |-- zhicwu/biserver-ce:8.0-full
-                    |
-                    |-- zhicwu/biserver-ce:8.0
-```
-* Official Ubuntu 16.04 LTS docker image
-* [Phusion Base Image](https://github.com/phusion/baseimage-docker) 0.9.22
-* Oracle JDK 8 latest release
-* [Pentaho BI Server Community Edition](http://community.pentaho.com/) 8.0.0.0-1 with plugins and patches
-    * [BTable](https://sourceforge.net/projects/btable/)
-    * [Community Text Editor](http://www.webdetails.pt/ctools/cte/)
-    * [D3 Component Library](https://github.com/webdetails/d3ComponentLibrary)
-    * Up-to-date JDBC drivers:
-        * [PostgreSQL JDBC Driver](https://jdbc.postgresql.org/) 42.1.4
-        * [MySQL Connector/J](http://dev.mysql.com/downloads/connector/j/) 5.1.44
-        * [jTDS](https://sourceforge.net/projects/jtds/) 1.3.1
-        * [H2DB](http://www.h2database.com) 1.4.196
-        * [HSQLDB](http://hsqldb.org/) 2.4.0
-        * [Cassandra JDBC Driver](https://github.com/zhicwu/cassandra-jdbc-driver) 0.6.4
-    * [Saiku](http://community.meteorite.bi/) - enabled SaikuWidgetComponent in CDE
-    * [XMLA Provider](https://sourceforge.net/projects/xmlaconnect/) 1.0.0.103 - download from Help -> Document popup and install on your windows box
+This image is based on Dockerfile  [zhicwu/biserver-ce:8.0 Dockerfile](https://hub.docker.com/r/zhicwu/biserver-ce/)
 
-## Get started
-- Run vanilla Pentaho server
-```
-$ docker run --name bi -p 8080:8080 -p 12345:1234 -d zhicwu/biserver-ce:8.0
-$ docker logs -f bi
-```
-- Run patched Pentaho server
-```
-$ docker run --name bi -e APPLY_PATCHES=Y -p 8080:8080 -p 12345:1234 -d zhicwu/biserver-ce:8.0
-$ docker logs -f bi
-```
-- Use docker-compose (Recommended)
-```
-$ git clone https://github.com/zhicwu/docker-biserver-ce.git -b 8.0 --single-branch
-$ cd docker-biserver-ce
-... edit .env and/or docker-compose.yml based on your needs, put your Pentaho configuration files under ext directory if necessary ...
-$ docker-compose up -d
-$ docker-compose logs -f
-```
-Regardless which approach you took, after server started, you should be able to access [Pentaho Server](http://localhost:8080)(admin/password) and [monitor metrics](http://localhost:12345/metrics) using [Prometheus](https://prometheus.io/) and [Grafana](https://grafana.com/).
+The image provides additional functionality:
+- deeper Russification of the Saiku OLAP interface;
+- the ability to work with the NoSQL database ClickHouse (ClickHouse 0.1 driver);
 
-## How to use external database
-Taking MySQL 5.x as an example. Assuming you have pbi_repository, pbi_quartz and pdi_jcr 3 databases created, change docker-compose.yml to set STORAGE_TYPE to mysql5, and then mount volume `./database.env:/biserver-ce/data/database.env` with the following content:
+
+## Running an image in different modes
+
+This image provides the ability to run in three main modes:
+- container;
+- docker-compose service;
+- docker-swarm service
+
+Configuration variables to run the image in all specified modes are placed in the file `.env`:
+```sh
+BI_IMAGE_TAG=:latest
+BI_CONTAINER_NAME=bi_pentaho
+
+BI_JAVA_OPTS="-javaagent:./jmx-exporter.jar=1234:/dev/null -XX:+UseG1GC -XX:+UseStringDeduplication -Xms4096m -Xmx4096m -XX:+AlwaysPreTouch -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC -XX:+PreserveFramePointer -Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -Dpentaho.karaf.root.copy.dest.folder=../../tmp/osgi/karaf -Dpentaho.karaf.root.transient=false -XX:ErrorFile=../logs/jvm_error.log -verbose:gc -Xloggc:../logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -XX:+PrintAdaptiveSizePolicy -XX:+PrintStringDeduplicationStatistics -XX:+PrintTenuringDistribution -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=2 -XX:GCLogFileSize=64M -XX:OnOutOfMemoryError=/usr/bin/oom_killer -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Dfile.encoding=utf8 -DDI_HOME=\"$DI_HOME\""
+
+# add current user id(same as $UID) if you run with non-root user
+HOST_USER_ID=
+
+# leave this empty to use hsqldb or mysql5 if you prefer external database
+STORAGE_TYPE=
+
+LOCALE_LANGUAGE=ru
+LOCALE_COUNTRY=RU
+
+PDI_HADOOP_CONFIG=hdp25
+
+PDI_MAX_LOG_LINES=10000
+PDI_MAX_LOG_TIMEOUT=1440
+PDI_MAX_OBJ_TIMEOUT=240
+
+SERVER_NAME=pentaho-ce
+SERVER_HOST=
+SERVER_HTTP_PORT=8080
+SERVER_AJP_PORT=8009
+SERVER_EXT_PORT=443
+SERVER_PROM_PORT=12345
+
 ```
-SERVER_PASSWD=password
-DB_HOST=xxx
-DB_PORT=3306
-DB_USER=xxx
-DB_PASSWD=xxx
+If necessary, you can make adjustments to these variables.
+Generally, adjustments are required for port relocations.
+`SERVER_HTTP_PORT`,
+`SERVER_AJP_PORT`,
+`SERVER_EXT_PORT`,
+`SERVER_PROM_PORT`
+if standard ports are already occupied by another service running.
+
+
+## Run in container mode
+
+To run into an image in container mode, you can use the script `runContainer.sh`:
+```sh
+#!/bin/sh
+. .env
+
+docker run -d \
+  --name $BI_CONTAINER_NAME \
+  -p "${SERVER_PROM_PORT}:1234" \
+  -p "${SERVER_HTTP_PORT}:8080" \
+  -p "${SERVER_AJP_PORT}:8009" \
+  -v  pentaho_pentaho_hidden:/biserver-ce/.pentaho/ \
+  -v  pentaho_hsqldb:/biserver-ce/data/hsqldb/ \
+  -v  pentaho_logs:/biserver-ce/tomcat/logs \
+  -v  pentaho_repository:/biserver-ce/pentaho-solutions/system/jackrabbit/repository \
+  -v  pentaho_tmp:/biserver-ce/tmp \
+  -e APPLY_PATCHES='Y' \
+  -e BI_JAVA_OPTS="${BI_JAVA_OPTS}" \
+  -e HOST_USER_ID=${HOST_USER_ID} \
+  -e STORAGE_TYPE=${STORAGE_TYPE} \
+  -e PDI_HADOOP_CONFIG=${PDI_HADOOP_CONFIG} \
+  -e PDI_MAX_LOG_LINES=${PDI_MAX_LOG_LINES} \
+  -e PDI_MAX_LOG_TIMEOUT=${PDI_MAX_LOG_TIMEOUT} \
+  -e PDI_MAX_OBJ_TIMEOUT=${PDI_MAX_OBJ_TIMEOUT} \
+  -e SERVER_NAME=${SERVER_NAME} \
+  -e SERVER_HOST=${SERVER_HOST} \
+  -e SERVER_PORT=${SERVER_EXT_PORT} \
+  flexberry/pentaho$BI_IMAGE_TAG
 ```
 
-## How to build
+For all modifiable files and directories of the container, at initial startup, the named volumes are created:
+- pentaho_hidden - hidden pentaho server files;
+- pentaho_hsqldb - internal hsql database to store current settings;
+- pentaho_repository - user file system;
+- pentaho_logs - server logs;
+- pentaho_tmp - temporarty files.
+
+When restarting, the image uses data from the specified named volumes.
+Thus, the user file and current settings are saved when the container is restarted.
+
+To stop the container, use the command:
+```sh
+# docker stop bi_pentaho
+
 ```
-$ git clone https://github.com/zhicwu/docker-biserver-ce.git -b 8.0 --single-branch
-$ cd docker-biserver-ce
-$ docker build -t my/biserver:7.1 .
+To resume work:
+
+```sh
+# docker start bi_pentaho
+
 ```
+To remove a (working) container:
+```sh
+# docker rm -f bi_pentaho
+
+```
+
+
+## Run in docker-compose service mode
+
+Use the configuration file `docker-compose.yml` to run the image in the docker-compose service mode:
+```
+version: '3.2'
+
+services:
+  pentaho:
+    image: flexberry/pentaho
+    command: /biserver-ce/start-pentaho.sh
+    ports:
+      - "${SERVER_PROM_PORT}:1234"
+      - "${SERVER_HTTP_PORT}:8080"
+      - "${SERVER_AJP_PORT}:8009"
+    volumes:
+      - hidden:/biserver-ce/.pentaho/
+      - hsqldb:/biserver-ce/data/hsqldb/
+      - logs:/biserver-ce/tomcat/logs
+      - repository:/biserver-ce/pentaho-solutions/system/jackrabbit/repository
+      - tmp:/biserver-ce/tmp
+
+    environment:
+      APPLY_PATCHES: 'Y'
+      BI_JAVA_OPTS: '${BI_JAVA_OPTS}'
+      HOST_USER_ID: ${HOST_USER_ID}
+      STORAGE_TYPE: ${STORAGE_TYPE}
+      PDI_HADOOP_CONFIG: ${PDI_HADOOP_CONFIG}
+      PDI_MAX_LOG_LINES: ${PDI_MAX_LOG_LINES}
+      PDI_MAX_LOG_TIMEOUT: ${PDI_MAX_LOG_TIMEOUT}
+      PDI_MAX_OBJ_TIMEOUT: ${PDI_MAX_OBJ_TIMEOUT}
+      SERVER_NAME: ${SERVER_NAME}
+      SERVER_HOST: ${SERVER_HOST}
+      SERVER_PORT: ${SERVER_EXT_PORT}
+
+volumes:
+  hidden:
+  hsqldb:
+  repository:
+  logs:
+  tmp:
+```
+
+Run service by command:
+```sh
+# docker-compose up -d
+```
+
+For all modifiable files and directories of the container, at initial startup, the named volumes are created:
+- pentaho_hidden - hidden pentaho server files;
+- pentaho_hsqldb - internal hsql database to store current settings;
+- pentaho_repository - user file system;
+- pentaho_logs - server logs;
+- pentaho_tmp - temporarty files.
+
+These names coincide with the names of the volumes used when running in container mode.
+Thus, they can be used in both image launch modes.
+
+When restarting, the image uses data from the specified named volumes.
+Thus, the user file and current settings are saved when the container is restarted.
+
+To stop the service, use the command:
+```sh
+# docker-compose down
+```
+
+In case the `pentaho` service should work on the server with other docker-services (for example, Postgres, MySQL, ClickHouse databases, ...)
+description of additional services can be added to the file `docker-compose.yml`.
+
+
+## Start in docker swarm service mode
+
+To run in cluster mode, you can use the above file `docker-compose.yml`.
+
+Run service by command:
+```sh
+docker-compose config | docker stack deploy -c - pentaho
+```
+where `pentaho` - name of service stack.
+
+The `docker-compose config` command configures the` docker-compose.yml` file according to the variables described in the `.env` file.
+The configured configuration file is passed to the `docker stack deploy` command to deploy the service stack.
+
+For all modifiable files and directories of the container, at initial startup, the named volumes are created:
+- pentaho_hidden - hidden pentaho server files;
+- pentaho_hsqldb - internal hsql database to store current settings;
+- pentaho_repository - user file system;
+- pentaho_logs - server logs;
+- pentaho_tmp - temporarty files.
+
+These names coincide with the names of the volumes used when running in container mode and the docker-compose service.
+Thus, they can be used in all image launch modes.
+
+When restarting, the image uses data from the specified named volumes.
+Thus, the user file and current settings are saved when the container is restarted.
+
+In the event that the `pentaho` service should work in a cluster with other docker-services (for example, Postgres, MySQL, ClickHouse databases, ...)
+A description of additional services can be added to the `docker-compose.yml` file.
+
+
